<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/iv_description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/iv_app_icon"
        android:paddingLeft="8dp"
        android:ellipsize="end"
        android:ems="9"
        android:singleLine="true"
        android:text="@string/list_apps_def_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <Switch
        android:id="@+id/auto_switch"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:focusable="false"
        android:paddingRight="5dp"
        android:textOff="@string/Off"
        android:textOn="@string/On" />

</RelativeLayout>