<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManagerActivity" >

    <RelativeLayout
        android:id="@+id/ll_switch_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnoff_all"
            android:textSize="20sp"
            android:paddingLeft="@dimen/content_horizontal"
            android:textColor="@android:color/darker_gray" />
        <!-- android:textSize="?android:attr/textAppearanceMedium" -->

        <Switch
            android:id="@+id/switch_all_Notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:layout_alignParentRight="true"
            android:textOff="@string/Close"
            android:textOn="@string/Open" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_list_apps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch_all_Notifications"
        android:layout_below="@+id/ll_switch_all"
        android:layout_marginTop="15dp"
        android:minHeight="28dip"
        android:textSize="15sp"
        android:paddingLeft="@dimen/content_horizontal"
        android:gravity="center_vertical|left"
        android:text="@string/list_apps"
        android:background="@android:drawable/divider_horizontal_bright" />

    <FrameLayout
        android:id="@+id/fl_listContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tv_list_apps" >

        <ListView
            android:id="@+id/lv_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/content_horizontal"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/loading_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible" >
<!--             android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp" -->
            <ProgressBar
                android:id="@+id/pb_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:singleLine="true"
                android:text="@string/settings_safetylegal_activity_loading"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>


    </FrameLayout>

</RelativeLayout>